[project]
name = "geoipx"
version = "0.1.0"
description = "A CLI tool for GeoIP lookups on public IP addresses, supporting JSON, XML, and CSV output formats."
authors = [
    {name = "Ephistopheles",email = "rjohanamed@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.20.0,<0.21.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "duckdb (>=1.4.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "geoipx", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
